Fix issue when selecting text on mobile. ASHES-1 #resolve

--- a/src/main/webapp/themes/ashes/css/general.css
+++ b/src/main/webapp/themes/ashes/css/general.css
@@ -706,7 +706,6 @@ border: 1px solid #ccc;
 padding-bottom: 0;
 margin: 0.5em 0;
 width: 100%;
-float: left;
 }
 
 table.ppid {
